--- a/lovelace/old_00_home_view.yaml
+++ b/lovelace/old_00_home_view.yaml
@@ -148,7 +148,7 @@ cards:
                 show_state: false
                 show_icon: true
                 show_name: false
-                entity: sensor.house_movement
+                entity: frontsensor.house_motion
                 state:
                   - value: 'No movement'
                     icon: mdi:walk
@@ -490,7 +490,8 @@ cards:
                   card: 
                     type: glance
                     show_state: false
-              - type: "custom:atomic-calendar"
+              - type: "custom:atomic-calendar-revive"
+                showWeekDay: true
                 title: "Calendar"
                 hoursFormat: 24h
                 entities:
@@ -507,16 +508,16 @@ cards:
                   - sensor.dining_room_window
                   - sensor.bedroom_window
                   - sensor.bedroom_door
-                  - entity: sensor.living_room_axis_movement
+                  - entity: binary_sensor.living_room_axis_motion_0
                     name: Living Room Left
                     secondary_info: last-changed
-                  - entity: sensor.living_room_axis_movement_2
+                  - entity: binary_sensor.passage_axis_motion_0
                     name: Living Room Right
                     secondary_info: last-changed
-                  - sensor.passage_movement
-                  - entity: sensor.upstairs_hallway_movement
+                  - binary_sensor.passage_motion_sensor
+                  - entity: binary_sensor.upstairs_hallway_motion_sensor
                     name: Stairs
-                  - entity: sensor.stefans_office_movement
+                  - entity: binary_sensor.stefans_room_motion
                     name: Stefans Office
                   - entity: switch.bike_charger
                     name: E-bike charger
